devServer自动编译打包

--- a/webpack/src/lessStyle.less
+++ b/webpack/src/lessStyle.less
@@ -1,9 +1,10 @@
-@width:200px;
-@height:200px;
+@width: 200px;
+@height: 200px;
 @color: red;
-#box2{
+#box2 {
   width: @width;
   height: @height;
   background-color: @color;
-  color:greenyellow;
+  color: greenyellow;
+  backface-visibility: hidden;
 }
